Compatible with homepage

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -19,19 +19,16 @@
       <form>
         <div id="contentInSearchBar">
           <h1>Awesome Search Engine</h1>
-          <input type="text" id="inputBar" name="Search Bar placeholder="Full Name">
+          <input type="text" id="inputBar" name="Search Bar" placeholder="Query">
           <input type="button" id="Button" value="Search">
         </div>
       </form>
     </section>
 
-    <section id="SearchChoices">
-    <!--   <div id="divTest1">feafewa</div>
-      <div id="testFade">
-        <h1>Fading in</h1>
-      </div> -->
-      <ul id="listOfSearches"></ul>
-    </section>
+    <div id="SearchChoices">
+      <input type="button" id="closeButton" onclick="ShowBox()" value="X">
+      <ol id="listOfSearches"></ol>
+    </div>
 
   </div>
 
